fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/CMA_Form__c.object-meta.xml
<CustomObject>
    <label>CMA Form</label>
    <nameField>
        <label>CMA Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMA Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>