fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Ex, knowledge, base education, experience…</inlineHelpText>
    <label>Comment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>