fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/Current_Product_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_Utilization__c</fullName>
    <label>Current Product Utilization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>No Increase or Decrease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>