fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/Did_the_Program_add_value_to_the_accou__c.field-meta.xml
<CustomField>
    <fullName>Did_the_Program_add_value_to_the_accou__c</fullName>
    <inlineHelpText>Please Explain</inlineHelpText>
    <label>Did the Program add value to the Acc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>