fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/Education_Record__c.field-meta.xml
<CustomField>
    <fullName>Education_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education Record</label>
    <referenceTo>Education_Record__c</referenceTo>
    <relationshipLabel>CMA Forms</relationshipLabel>
    <relationshipName>CMA_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>