fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/Increase_in_use_of_National_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Increase_in_use_of_National_Guidelines__c</fullName>
    <inlineHelpText>Based on Standardized/Kitting approach</inlineHelpText>
    <label>Increase in use of National Guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>