fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/Licensing_of_Program__c.field-meta.xml
<CustomField>
    <fullName>Licensing_of_Program__c</fullName>
    <label>Licensing of Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Potential (Actively being discussed with Client)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>