fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/New_Key_Contacts__c.field-meta.xml
<CustomField>
    <fullName>New_Key_Contacts__c</fullName>
    <inlineHelpText>CEO,Medical Director,CNO,ICU Director etc...</inlineHelpText>
    <label>New Key Contacts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>