fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/New_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunities__c</fullName>
    <label>New Opportunities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Programs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>