fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Upgrade__c</fullName>
    <inlineHelpText>From Single use to a kit or from a Basic Kit to a Standardixed Kit</inlineHelpText>
    <label>Upgrade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standardized Kit</fullName>
            </value>
            <value>
                <fullName>Upgraded Kit</fullName>
            </value>
            <value>
                <fullName>No Upgrade or downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>