fullSandbox11072023/force-app/main/default/objects/CMA_Form__c/fields/Utilizations_for_the_Specific_account__c.field-meta.xml
<CustomField>
    <fullName>Utilizations_for_the_Specific_account__c</fullName>
    <inlineHelpText>Of this current CMA Program, how many times have they utilized for the specific account? (Including this program)</inlineHelpText>
    <label>#Utilizations for the Specific account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>